# benchmark

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  benchmark.py  config.yaml  config_test.yaml  download_weights.py  environment.yml  pyproject.toml  requirements.txt  run_benchmark.sh
docs/: ADD_CUSTOM_MODEL.md  ANALYSIS_DESIGN.md  ANALYSIS_USAGE.md  EXPORT_GUIDE.md  FORMAT_COMPARISON.md  IMPROVEMENT_SUMMARY.md  MAP_ANALYSIS.md  ONNX_FIX.md  PROJECT_ANALYSIS_REPORT.md
examples/: COMPARE_PT_ONNX.md  README.md  analyze_example.py  benchmark_example.py  compare_example.py  compare_pt_onnx.py  export_example.py  onnx_benchmark_example.py  quick_start.py  utils.py  visualize_clean.py
scripts/: README.md  __init__.py  __main__.py  benchmark_onnx_batch.py  download_weights.py  quick_test.py  test_analysis.py  test_installation.py  test_multi_baseline.py
src/: __init__.py  cli.py
src/analysis/: __init__.py  format_comparison.py  model_comparison.py
src/data/: coco_dataset.py
src/metrics/: coco_metrics.py
src/models/: __init__.py  base.py  exporters.py  faster_rcnn.py  onnx_model.py  rt_detr.py  simulated_model.py  ultralytics_wrapper.py  yolov11.py  yolov8.py  yolov9.py
src/utils/: __init__.py  coco_utils.py  logger.py  path_utils.py  visualization.py
tests/: test_analysis.py  test_config.py  test_data.py  test_export.py  test_integration.py  test_metrics.py  test_models.py  test_onnx_model.py  test_onnx_model_info.py  test_onnx_nms.py  test_visualization.py
